--- a/assignment3/app_fastapi/Dockerfile
+++ b/assignment3/app_fastapi/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /app
 COPY . .
 RUN pip install -r requirements.txt
 RUN python -m spacy download en_core_web_sm
-CMD ["python", "-m", "streamlit", "run", "app_streamlit.py"]
+RUN apt-get update && apt-get install -y curl
+CMD ["uvicorn", "app_fastapi:app", "--reload", "host=0.0.0.0.8000"]
