fix paths and curl command

--- a/assignment3/app_fastapi/Dockerfile
+++ b/assignment3/app_fastapi/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:slim
 WORKDIR /app
 COPY . .
-RUN pip install -r requirements.txt
+RUN pip install -r app_fastapi/requirements.txt
 RUN python -m spacy download en_core_web_sm
 RUN apt-get update && apt-get install -y curl
-CMD ["uvicorn", "app_fastapi:app", "--reload", "host=0.0.0.0.8000"]
+CMD ["uvicorn", "app_fastapi.fastapi_app:app", "--reload"]
