--- a/assignment3/app_streamlit/Dockerfile
+++ b/assignment3/app_streamlit/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:slim
 WORKDIR /app
 COPY . .
-RUN pip install -r requirements.txt
+RUN pip install -r app_streamlit/requirements.txt
 RUN python -m spacy download en_core_web_sm
-CMD ["python", "-m", "streamlit", "run", "app_streamlit.py"]
+CMD ["python", "-m", "streamlit", "run", "app_streamlit/app_streamlit.py"]
